--- a/LetsGoBikingClient/pom.xml
+++ b/LetsGoBikingClient/pom.xml
@@ -64,7 +64,7 @@
                 <configuration>
                     <wsdlUrls>
                         <wsdlUrl>http://localhost:8000/StationService?wsdl</wsdlUrl>
-                        <!--<wsdlUrl>http://localhost:8001/RoutingService?wsdl</wsdlUrl>-->
+                        <wsdlUrl>http://localhost:8001/RoutingService?wsdl</wsdlUrl>
                     </wsdlUrls>
                     <keep>true</keep>
                     <packageName>com.soap.ws.client.generated</packageName>
