--- a/LetsGoBikingServer/LetsGoBikingServer/LetsGoBikingServer.csproj
+++ b/LetsGoBikingServer/LetsGoBikingServer/LetsGoBikingServer.csproj
@@ -93,6 +93,7 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\CompleteRoute.cs" />
     <Compile Include="Models\Contract.cs" />
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\Route.cs" />
