--- a/LetsGoBikingServer/LetsGoBikingServer/LetsGoBikingServer.csproj
+++ b/LetsGoBikingServer/LetsGoBikingServer/LetsGoBikingServer.csproj
@@ -109,6 +109,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\DistanceTooGreatException.cs" />
+    <Compile Include="Exceptions\NoStationFoundException.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ActiveMQService.cs" />
