--- a/LetsGoBikingServer/LetsGoBikingServer/LetsGoBikingServer.csproj
+++ b/LetsGoBikingServer/LetsGoBikingServer/LetsGoBikingServer.csproj
@@ -61,6 +61,7 @@
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.Composition" />
+    <Reference Include="System.Device" />
     <Reference Include="System.Memory, Version=4.0.1.2, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Memory.4.5.5\lib\net461\System.Memory.dll</HintPath>
     </Reference>
@@ -74,6 +75,7 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Caching" />
     <Reference Include="System.Runtime.CompilerServices.Unsafe, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.CompilerServices.Unsafe.6.0.0\lib\net461\System.Runtime.CompilerServices.Unsafe.dll</HintPath>
     </Reference>
@@ -110,7 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Exceptions\DistanceTooGreatException.cs" />
+    <Compile Include="Exceptions\NoPositionFoundException.cs" />
     <Compile Include="Exceptions\NoStationFoundException.cs" />
+    <Compile Include="Manager\ItineraryCache.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ActiveMQService.cs" />
