--- a/LetsGoBikingServer/LetsGoBikingProxy/LetsGoBikingProxy.csproj
+++ b/LetsGoBikingServer/LetsGoBikingProxy/LetsGoBikingProxy.csproj
@@ -153,6 +153,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Cache\GenericProxyCache.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IStationProxyService.cs" />
@@ -168,6 +169,7 @@
       <Name>LetsGoBikingLibrary2</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <VSToolsPath Condition="'$(VSToolsPath)' == '' and '$(VisualStudioVersion)' != '' and '$(VisualStudioVersion)' != '11.0'">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
