--- a/LetsGoBikingServer/LetsGoBikingProxy/App.config
+++ b/LetsGoBikingServer/LetsGoBikingProxy/App.config
@@ -15,7 +15,7 @@
 			<serviceBehaviors>
 				<behavior>
 					<!-- Les valeurs pour l'environnement de production -->
-					<serviceMetadata httpGetEnabled="false" httpsGetEnabled="false" />
+					<serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
 					<serviceDebug includeExceptionDetailInFaults="false" />
 				</behavior>
 			</serviceBehaviors>
